y.output
State 67 conflicts: 2 shift/reduce
State 87 conflicts: 6 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 151 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROG $end

    1 PROG: MAINMETHOD CLASSDECLLIST

    2 STMLIST: STM STMLIST
    3        | %empty

    4 CLASSDECLLIST: CLASSDECL CLASSDECLLIST
    5              | %empty

    6 METHODDECLLIST: METHODDECL METHODDECLLIST
    7               | %empty

    8 FORMALLIST: TYPE ID FORMALRESTLIST
    9           | %empty

   10 FORMALRESTLIST: FORMALREST FORMALRESTLIST
   11               | %empty

   12 FORMALREST: ',' TYPE ID

   13 VARDECLLIST: VARDECL VARDECLLIST
   14            | %empty

   15 EXPLIST: EXP EXPRESTLIST
   16        | %empty

   17 EXPRESTLIST: EXPREST EXPRESTLIST
   18            | %empty

   19 EXPREST: ',' EXP

   20 NUMBERLIST: NUMBER NUMBERRESTLIST
   21           | %empty

   22 NUMBERRESTLIST: NUMBERREST NUMBERRESTLIST
   23               | %empty

   24 NUMBERREST: ',' NUMBER

   25 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' STMLIST '}'

   26 CLASSDECL: CLASS ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'
   27          | CLASS ID '{' VARDECLLIST METHODDECLLIST '}'

   28 VARDECL: CLASS ID ID ';'
   29        | INT ID ';'
   30        | INT ID '=' NUMBER ';'
   31        | INT '[' ']' ID ';'
   32        | INT '[' ']' ID '=' '{' NUMBERLIST '}' ';'

   33 METHODDECL: PUBLIC TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

   34 TYPE: CLASS ID
   35     | INT
   36     | INT '[' ']'

   37 STM: '{' STMLIST '}'
   38    | IF '(' EXP ')' STM ELSE STM
   39    | IF '(' EXP ')' STM
   40    | WHILE '(' EXP ')' STM
   41    | WHILE '(' EXP ')' ';'
   42    | EXP '=' EXP ';'
   43    | EXP '[' EXP ']' '=' EXP ';'
   44    | EXP '[' EXP ']' '=' '{' EXPLIST '}' ';'
   45    | EXP '.' ID '(' EXPLIST ')' ';'
   46    | CONTINUE ';'
   47    | BREAK ';'
   48    | RETURN EXP ';'
   49    | PUTINT '(' EXP ')' ';'
   50    | PUTCH '(' EXP ')' ';'
   51    | PUTARRAY '(' EXP ',' EXP ')' ';'
   52    | STARTTIME '(' ')' ';'
   53    | STOPTIME '(' ')' ';'

   54 EXP: EXP OP_PLUS EXP
   55    | EXP OP_MINUS EXP
   56    | EXP OP_MULTIPLY EXP
   57    | EXP OP_DIVTION EXP
   58    | EXP '[' EXP ']'
   59    | EXP '.' ID '(' EXPLIST ')'
   60    | EXP '.' ID
   61    | NUMBER
   62    | TTRUE
   63    | FFALSE
   64    | LENGTH '(' EXP ')'
   65    | ID
   66    | THIS
   67    | NEW INT '[' EXP ']'
   68    | NEW ID '(' ')'
   69    | '!' EXP
   70    | OP_MINUS EXP
   71    | '(' EXP ')'
   72    | '(' '{' STMLIST '}' EXP ')'
   73    | GETINT '(' ')'
   74    | GETCH '(' ')'
   75    | GETARRAY '(' EXP ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 69
    '(' (40) 25 33 38 39 40 41 45 49 50 51 52 53 59 64 68 71 72 73 74 75
    ')' (41) 25 33 38 39 40 41 45 49 50 51 52 53 59 64 68 71 72 73 74 75
    ',' (44) 12 19 24 51
    '.' (46) 45 59 60
    ';' (59) 28 29 30 31 32 41 42 43 44 45 46 47 48 49 50 51 52 53
    '=' (61) 30 32 42 43 44
    '[' (91) 31 32 36 43 44 58 67
    ']' (93) 31 32 36 43 44 58 67
    '{' (123) 25 26 27 32 33 37 44 72
    '}' (125) 25 26 27 32 33 37 44 72
    error (256)
    OP_PLUS <token> (258) 54
    OP_MINUS <token> (259) 55 70
    OP_MULTIPLY <token> (260) 56
    OP_DIVTION <token> (261) 57
    PUTINT <key> (262) 49
    PUTCH <key> (263) 50
    PUTARRAY <key> (264) 51
    GETINT <key> (265) 73
    GETCH <key> (266) 74
    GETARRAY <key> (267) 75
    MAIN <key> (268) 25
    INT <key> (269) 25 29 30 31 32 35 36 67
    PUBLIC <key> (270) 25 33
    CLASS <key> (271) 26 27 28 34
    IF <key> (272) 38 39
    ELSE <key> (273) 38
    WHILE <key> (274) 40 41
    CONTINUE <key> (275) 46
    BREAK <key> (276) 47
    RETURN <key> (277) 48
    STARTTIME <key> (278) 52
    STOPTIME <key> (279) 53
    TTRUE <key> (280) 62
    FFALSE <key> (281) 63
    LENGTH <key> (282) 64
    THIS <key> (283) 66
    NEW <key> (284) 67 68
    EXTENDS <key> (285) 26
    ID <exp> (286) 8 12 26 27 28 29 30 31 32 33 34 45 59 60 65 68
    NUMBER <exp> (287) 20 24 30 61
    UMINUS (288)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    PROG <prog> (46)
        on left: 1
        on right: 0
    STMLIST <stmList> (47)
        on left: 2 3
        on right: 2 25 33 37 72
    CLASSDECLLIST <classDeclList> (48)
        on left: 4 5
        on right: 1 4
    METHODDECLLIST <methodDeclList> (49)
        on left: 6 7
        on right: 6 26 27
    FORMALLIST <formalList> (50)
        on left: 8 9
        on right: 33
    FORMALRESTLIST <formalList> (51)
        on left: 10 11
        on right: 8 10
    FORMALREST <formal> (52)
        on left: 12
        on right: 10
    VARDECLLIST <varDeclList> (53)
        on left: 13 14
        on right: 13 26 27 33
    EXPLIST <expList> (54)
        on left: 15 16
        on right: 44 45 59
    EXPRESTLIST <expList> (55)
        on left: 17 18
        on right: 15 17
    EXPREST <exp> (56)
        on left: 19
        on right: 17
    NUMBERLIST <expList> (57)
        on left: 20 21
        on right: 32
    NUMBERRESTLIST <expList> (58)
        on left: 22 23
        on right: 20 22
    NUMBERREST <exp> (59)
        on left: 24
        on right: 22
    MAINMETHOD <mainMethod> (60)
        on left: 25
        on right: 1
    CLASSDECL <classDecl> (61)
        on left: 26 27
        on right: 4
    VARDECL <varDecl> (62)
        on left: 28 29 30 31 32
        on right: 13
    METHODDECL <methodDecl> (63)
        on left: 33
        on right: 6
    TYPE <type> (64)
        on left: 34 35 36
        on right: 8 12 33
    STM <stm> (65)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 2 38 39 40
    EXP <exp> (66)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 15 19 38 39 40 41 42 43 44 45 48 49 50 51 54 55 56 57 58 59 60 64 67 69 70 71 72 75


State 0

    0 $accept: . PROG $end

    PUBLIC  shift, and go to state 1

    PROG        go to state 2
    MAINMETHOD  go to state 3


State 1

   25 MAINMETHOD: PUBLIC . INT MAIN '(' ')' '{' STMLIST '}'

    INT  shift, and go to state 4


State 2

    0 $accept: PROG . $end

    $end  shift, and go to state 5


State 3

    1 PROG: MAINMETHOD . CLASSDECLLIST

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 7
    CLASSDECL      go to state 8


State 4

   25 MAINMETHOD: PUBLIC INT . MAIN '(' ')' '{' STMLIST '}'

    MAIN  shift, and go to state 9


State 5

    0 $accept: PROG $end .

    $default  accept


State 6

   26 CLASSDECL: CLASS . ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'
   27          | CLASS . ID '{' VARDECLLIST METHODDECLLIST '}'

    ID  shift, and go to state 10


State 7

    1 PROG: MAINMETHOD CLASSDECLLIST .

    $default  reduce using rule 1 (PROG)


State 8

    4 CLASSDECLLIST: CLASSDECL . CLASSDECLLIST

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 11
    CLASSDECL      go to state 8


State 9

   25 MAINMETHOD: PUBLIC INT MAIN . '(' ')' '{' STMLIST '}'

    '('  shift, and go to state 12


State 10

   26 CLASSDECL: CLASS ID . EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'
   27          | CLASS ID . '{' VARDECLLIST METHODDECLLIST '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    4 CLASSDECLLIST: CLASSDECL CLASSDECLLIST .

    $default  reduce using rule 4 (CLASSDECLLIST)


State 12

   25 MAINMETHOD: PUBLIC INT MAIN '(' . ')' '{' STMLIST '}'

    ')'  shift, and go to state 15


State 13

   26 CLASSDECL: CLASS ID EXTENDS . ID '{' VARDECLLIST METHODDECLLIST '}'

    ID  shift, and go to state 16


State 14

   27 CLASSDECL: CLASS ID '{' . VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 17
    CLASS  shift, and go to state 18

    $default  reduce using rule 14 (VARDECLLIST)

    VARDECLLIST  go to state 19
    VARDECL      go to state 20


State 15

   25 MAINMETHOD: PUBLIC INT MAIN '(' ')' . '{' STMLIST '}'

    '{'  shift, and go to state 21


State 16

   26 CLASSDECL: CLASS ID EXTENDS ID . '{' VARDECLLIST METHODDECLLIST '}'

    '{'  shift, and go to state 22


State 17

   29 VARDECL: INT . ID ';'
   30        | INT . ID '=' NUMBER ';'
   31        | INT . '[' ']' ID ';'
   32        | INT . '[' ']' ID '=' '{' NUMBERLIST '}' ';'

    ID   shift, and go to state 23
    '['  shift, and go to state 24


State 18

   28 VARDECL: CLASS . ID ID ';'

    ID  shift, and go to state 25


State 19

   27 CLASSDECL: CLASS ID '{' VARDECLLIST . METHODDECLLIST '}'

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 7 (METHODDECLLIST)

    METHODDECLLIST  go to state 27
    METHODDECL      go to state 28


State 20

   13 VARDECLLIST: VARDECL . VARDECLLIST

    INT    shift, and go to state 17
    CLASS  shift, and go to state 18

    $default  reduce using rule 14 (VARDECLLIST)

    VARDECLLIST  go to state 29
    VARDECL      go to state 20


State 21

   25 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' . STMLIST '}'

    OP_MINUS   shift, and go to state 30
    PUTINT     shift, and go to state 31
    PUTCH      shift, and go to state 32
    PUTARRAY   shift, and go to state 33
    GETINT     shift, and go to state 34
    GETCH      shift, and go to state 35
    GETARRAY   shift, and go to state 36
    IF         shift, and go to state 37
    WHILE      shift, and go to state 38
    CONTINUE   shift, and go to state 39
    BREAK      shift, and go to state 40
    RETURN     shift, and go to state 41
    STARTTIME  shift, and go to state 42
    STOPTIME   shift, and go to state 43
    TTRUE      shift, and go to state 44
    FFALSE     shift, and go to state 45
    LENGTH     shift, and go to state 46
    THIS       shift, and go to state 47
    NEW        shift, and go to state 48
    ID         shift, and go to state 49
    NUMBER     shift, and go to state 50
    '('        shift, and go to state 51
    '{'        shift, and go to state 52
    '!'        shift, and go to state 53

    $default  reduce using rule 3 (STMLIST)

    STMLIST  go to state 54
    STM      go to state 55
    EXP      go to state 56


State 22

   26 CLASSDECL: CLASS ID EXTENDS ID '{' . VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 17
    CLASS  shift, and go to state 18

    $default  reduce using rule 14 (VARDECLLIST)

    VARDECLLIST  go to state 57
    VARDECL      go to state 20


State 23

   29 VARDECL: INT ID . ';'
   30        | INT ID . '=' NUMBER ';'

    ';'  shift, and go to state 58
    '='  shift, and go to state 59


State 24

   31 VARDECL: INT '[' . ']' ID ';'
   32        | INT '[' . ']' ID '=' '{' NUMBERLIST '}' ';'

    ']'  shift, and go to state 60


State 25

   28 VARDECL: CLASS ID . ID ';'

    ID  shift, and go to state 61


State 26

   33 METHODDECL: PUBLIC . TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

    INT    shift, and go to state 62
    CLASS  shift, and go to state 63

    TYPE  go to state 64


State 27

   27 CLASSDECL: CLASS ID '{' VARDECLLIST METHODDECLLIST . '}'

    '}'  shift, and go to state 65


State 28

    6 METHODDECLLIST: METHODDECL . METHODDECLLIST

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 7 (METHODDECLLIST)

    METHODDECLLIST  go to state 66
    METHODDECL      go to state 28


State 29

   13 VARDECLLIST: VARDECL VARDECLLIST .

    $default  reduce using rule 13 (VARDECLLIST)


State 30

   70 EXP: OP_MINUS . EXP

    OP_MINUS  shift, and go to state 30
    GETINT    shift, and go to state 34
    GETCH     shift, and go to state 35
    GETARRAY  shift, and go to state 36
    TTRUE     shift, and go to state 44
    FFALSE    shift, and go to state 45
    LENGTH    shift, and go to state 46
    THIS      shift, and go to state 47
    NEW       shift, and go to state 48
    ID        shift, and go to state 49
    NUMBER    shift, and go to state 50
    '('       shift, and go to state 51
    '!'       shift, and go to state 53

    EXP  go to state 67


State 31

   49 STM: PUTINT . '(' EXP ')' ';'

    '('  shift, and go to state 68


State 32

   50 STM: PUTCH . '(' EXP ')' ';'

    '('  shift, and go to state 69


State 33

   51 STM: PUTARRAY . '(' EXP ',' EXP ')' ';'

    '('  shift, and go to state 70


State 34

   73 EXP: GETINT . '(' ')'

    '('  shift, and go to state 71


State 35

   74 EXP: GETCH . '(' ')'

    '('  shift, and go to state 72


State 36

   75 EXP: GETARRAY . '(' EXP ')'

    '('  shift, and go to state 73


State 37

   38 STM: IF . '(' EXP ')' STM ELSE STM
   39    | IF . '(' EXP ')' STM

    '('  shift, and go to state 74


State 38

   40 STM: WHILE . '(' EXP ')' STM
   41    | WHILE . '(' EXP ')' ';'

    '('  shift, and go to state 75


State 39

   46 STM: CONTINUE . ';'

    ';'  shift, and go to state 76


State 40

   47 STM: BREAK . ';'

    ';'  shift, and go to state 77


State 41

   48 STM: RETURN . EXP ';'

    OP_MINUS  shift, and go to state 30
    GETINT    shift, and go to state 34
    GETCH     shift, and go to state 35
    GETARRAY  shift, and go to state 36
    TTRUE     shift, and go to state 44
    FFALSE    shift, and go to state 45
    LENGTH    shift, and go to state 46
    THIS      shift, and go to state 47
    NEW       shift, and go to state 48
    ID        shift, and go to state 49
    NUMBER    shift, and go to state 50
    '('       shift, and go to state 51
    '!'       shift, and go to state 53

    EXP  go to state 78


State 42

   52 STM: STARTTIME . '(' ')' ';'

    '('  shift, and go to state 79


State 43

   53 STM: STOPTIME . '(' ')' ';'

    '('  shift, and go to state 80


State 44

   62 EXP: TTRUE .

    $default  reduce using rule 62 (EXP)


State 45

   63 EXP: FFALSE .

    $default  reduce using rule 63 (EXP)


State 46

   64 EXP: LENGTH . '(' EXP ')'

    '('  shift, and go to state 81


State 47

   66 EXP: THIS .

    $default  reduce using rule 66 (EXP)


State 48

   67 EXP: NEW . INT '[' EXP ']'
   68    | NEW . ID '(' ')'

    INT  shift, and go to state 82
    ID   shift, and go to state 83


State 49

   65 EXP: ID .

    $default  reduce using rule 65 (EXP)


State 50

   61 EXP: NUMBER .

    $default  reduce using rule 61 (EXP)


State 51

   71 EXP: '(' . EXP ')'
   72    | '(' . '{' STMLIST '}' EXP ')'

    OP_MINUS  shift, and go to state 30
    GETINT    shift, and go to state 34
    GETCH     shift, and go to state 35
    GETARRAY  shift, and go to state 36
    TTRUE     shift, and go to state 44
    FFALSE    shift, and go to state 45
    LENGTH    shift, and go to state 46
    THIS      shift, and go to state 47
    NEW       shift, and go to state 48
    ID        shift, and go to state 49
    NUMBER    shift, and go to state 50
    '('       shift, and go to state 51
    '{'       shift, and go to state 84
    '!'       shift, and go to state 53

    EXP  go to state 85


State 52

   37 STM: '{' . STMLIST '}'

    OP_MINUS   shift, and go to state 30
    PUTINT     shift, and go to state 31
    PUTCH      shift, and go to state 32
    PUTARRAY   shift, and go to state 33
    GETINT     shift, and go to state 34
    GETCH      shift, and go to state 35
    GETARRAY   shift, and go to state 36
    IF         shift, and go to state 37
    WHILE      shift, and go to state 38
    CONTINUE   shift, and go to state 39
    BREAK      shift, and go to state 40
    RETURN     shift, and go to state 41
    STARTTIME  shift, and go to state 42
    STOPTIME   shift, and go to state 43
    TTRUE      shift, and go to state 44
    FFALSE     shift, and go to state 45
    LENGTH     shift, and go to state 46
    THIS       shift, and go to state 47
    NEW        shift, and go to state 48
    ID         shift, and go to state 49
    NUMBER     shift, and go to state 50
    '('        shift, and go to state 51
    '{'        shift, and go to state 52
    '!'        shift, and go to state 53

    $default  reduce using rule 3 (STMLIST)

    STMLIST  go to state 86
    STM      go to state 55
    EXP      go to state 56


State 53

   69 EXP: '!' . EXP

    OP_MINUS  shift, and go to state 30
    GETINT    shift, and go to state 34
    GETCH     shift, and go to state 35
    GETARRAY  shift, and go to state 36
    TTRUE     shift, and go to state 44
    FFALSE    shift, and go to state 45
    LENGTH    shift, and go to state 46
    THIS      shift, and go to state 47
    NEW       shift, and go to state 48
    ID        shift, and go to state 49
    NUMBER    shift, and go to state 50
    '('       shift, and go to state 51
    '!'       shift, and go to state 53

    EXP  go to state 87


State 54

   25 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' STMLIST . '}'

    '}'  shift, and go to state 88


State 55

    2 STMLIST: STM . STMLIST

    OP_MINUS   shift, and go to state 30
    PUTINT     shift, and go to state 31
    PUTCH      shift, and go to state 32
    PUTARRAY   shift, and go to state 33
    GETINT     shift, and go to state 34
    GETCH      shift, and go to state 35
    GETARRAY   shift, and go to state 36
    IF         shift, and go to state 37
    WHILE      shift, and go to state 38
    CONTINUE   shift, and go to state 39
    BREAK      shift, and go to state 40
    RETURN     shift, and go to state 41
    STARTTIME  shift, and go to state 42
    STOPTIME   shift, and go to state 43
    TTRUE      shift, and go to state 44
    FFALSE     shift, and go to state 45
    LENGTH     shift, and go to state 46
    THIS       shift, and go to state 47
    NEW        shift, and go to state 48
    ID         shift, and go to state 49
    NUMBER     shift, and go to state 50
    '('        shift, and go to state 51
    '{'        shift, and go to state 52
    '!'        shift, and go to state 53

    $default  reduce using rule 3 (STMLIST)

    STMLIST  go to state 89
    STM      go to state 55
    EXP      go to state 56


State 56

   42 STM: EXP . '=' EXP ';'
   43    | EXP . '[' EXP ']' '=' EXP ';'
   44    | EXP . '[' EXP ']' '=' '{' EXPLIST '}' ';'
   45    | EXP . '.' ID '(' EXPLIST ')' ';'
   54 EXP: EXP . OP_PLUS EXP
   55    | EXP . OP_MINUS EXP
   56    | EXP . OP_MULTIPLY EXP
   57    | EXP . OP_DIVTION EXP
   58    | EXP . '[' EXP ']'
   59    | EXP . '.' ID '(' EXPLIST ')'
   60    | EXP . '.' ID

    OP_PLUS      shift, and go to state 90
    OP_MINUS     shift, and go to state 91
    OP_MULTIPLY  shift, and go to state 92
    OP_DIVTION   shift, and go to state 93
    '='          shift, and go to state 94
    '['          shift, and go to state 95
    '.'          shift, and go to state 96


State 57

   26 CLASSDECL: CLASS ID EXTENDS ID '{' VARDECLLIST . METHODDECLLIST '}'

    PUBLIC  shift, and go to state 26

    $default  reduce using rule 7 (METHODDECLLIST)

    METHODDECLLIST  go to state 97
    METHODDECL      go to state 28


State 58

   29 VARDECL: INT ID ';' .

    $default  reduce using rule 29 (VARDECL)


State 59

   30 VARDECL: INT ID '=' . NUMBER ';'

    NUMBER  shift, and go to state 98


State 60

   31 VARDECL: INT '[' ']' . ID ';'
   32        | INT '[' ']' . ID '=' '{' NUMBERLIST '}' ';'

    ID  shift, and go to state 99


State 61

   28 VARDECL: CLASS ID ID . ';'

    ';'  shift, and go to state 100


State 62

   35 TYPE: INT .
   36     | INT . '[' ']'

    '['  shift, and go to state 101
